--- a/ToDoApp/ToDoApp.vcxproj.filters
+++ b/ToDoApp/ToDoApp.vcxproj.filters
@@ -13,15 +13,56 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="ソース ファイル\memo">
+      <UniqueIdentifier>{3f6700b5-04e4-430c-9c71-0c7973845a1a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="gaiyou.txt">
+    <Text Include="tasklist.txt">
       <Filter>ソース ファイル</Filter>
+    </Text>
+    <Text Include="gaiyou.txt">
+      <Filter>ソース ファイル\memo</Filter>
+    </Text>
+    <Text Include="oldmain.txt">
+      <Filter>ソース ファイル\memo</Filter>
     </Text>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ToDoApp.c">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Create.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Update.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Confirmation.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Delete.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="MethodSelect.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Create.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Delete.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Update.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Confirmation.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="MethodSelect.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
